Feat: 전공 목록 API 응답에 svg 경로 추가
- svg 파일 추가 & Cache Control 설정